parser/src/tests/corpus/negatives/num-letter/expected
Error from "negatives/num-letter/input", line 1:
| 7x
|  ^
|
+-> Syntax error: unexpected 'x' in numeric literal

